# oio-sds

./: .codecov.yml  .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .indent.pro  .pylintrc  .travis.yml  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  Jenkinsfile  LICENCE  MANIFEST.in  README.md  TESTING.md  Variables.CMakeFile  Variables.md  Variables.md.inc  all-requirements.txt  conf.json  confgen.py  doc.h  pyproject.toml  redcurrant.spec  redpanda.docker-compose.yml  requirements.txt  setup.cfg  setup.py  sonar.properties  test-requirements.txt  tox.ini
cache/: CMakeLists.txt  autogen.h.in  cache.c  cache.h  cache_lru.c  cache_memcached.c  cache_memcached.h  cache_multilayer.c  cache_noop.c  cache_redis.c  cache_redis.h  test_cache.c  test_cache_abstract.c  test_cache_memcached.c  test_cache_redis.c
conscience/: CMakeLists.txt  client.c  lb.c  lb.h  remote.c  remote.h  server.c  srvset.c  srvset.h  test_srvset.c
core/: .gitignore  CMakeLists.txt  Doxyfile  cfg.c  cfg_cache.c  cs.c  cs_internals.h  dir.c  errors.c  ext.c  hc_url_ext.h  headers.c  http_del.c  http_del.h  http_get.c  http_get.h  http_internals.h  http_put.c  http_put.h  internals.h  lb.c  loc.c  log.c  lrutree.c  lrutree.h  oio_core.h  oio_sds.h  oiocfg.h  oiocs.h  oiodir.h  oioerrors.h  oioext.h  oiolb.h  oioloc.h  oiolog.h  oiostr.h  oiourl.h  oiovar.h  proxy.c  sds.c  (+23 more)
crawler/: CMakeLists.txt  action_dedup_container_service.c  action_integrity_service.c  action_list_container_service.c  action_move_chunk_basic_service.c  action_purge_container_service.c  action_rules_motor_service.c  action_test_service.c  atos.grid.Crawler.conf  crawler.c  crawler_cmd.c  crawler_common_tools.c  crawler_common_tools.h  crawler_constants.h  lib_trip.h  trip_chunk.c  trip_container.c  trip_content.c  trip_prefix.c  trip_sqlx.c  trip_test.c
ecp/: CMakeLists.txt  ecp.c  ecp.h
events/: CMakeLists.txt  beanstalkd.c  beanstalkd.h  cnats.h  kafka.c  kafka.h  nats.c  oio_events_queue.c  oio_events_queue.h  oio_events_queue_beanstalkd.c  oio_events_queue_beanstalkd.h  oio_events_queue_buffer.c  oio_events_queue_buffer.h  oio_events_queue_fanout.c  oio_events_queue_fanout.h  oio_events_queue_internals.c  oio_events_queue_internals.h  oio_events_queue_kafka.c  oio_events_queue_kafka.h  oio_events_queue_kafka_sync.c  oio_events_queue_kafka_sync.h  oio_events_queue_nats.c  oio_events_queue_nats.h  oio_events_queue_rabbitmq.c  oio_events_queue_rabbitmq.h  oio_events_queue_shared.c  oio_events_queue_shared.h  oio_events_queue_zmq.c  oio_events_queue_zmq.h  rabbitmq.c  rabbitmq.h
fabx/: CMakeLists.txt  client.c  client.h  common.c  common.h  protocol.h  protocol.md  server.c  utils.h
meta0v2/: CMakeLists.txt  doc.h  internals.h  meta0_backend.c  meta0_backend.h  meta0_client.c  meta0_gridd_dispatcher.c  meta0_gridd_dispatcher.h  meta0_init.c  meta0_prefixassign.c  meta0_prefixassign.h  meta0_remote.c  meta0_remote.h  meta0_server.c  meta0_utils.c  meta0_utils.h  zk_manager.c  zk_manager.h
meta1v2/: CMakeLists.txt  common.c  compound_types.c  compound_types.h  doc.h  internals.h  internals_sqlite.h  meta1_backend.c  meta1_backend.h  meta1_backend_internals.c  meta1_backend_internals.h  meta1_backend_properties.c  meta1_backend_references.c  meta1_backend_services.c  meta1_backend_test.c  meta1_client.c  meta1_gridd_dispatcher.c  meta1_gridd_dispatcher.h  meta1_prefixes.c  meta1_prefixes.h  meta1_remote.c  meta1_remote.h  meta1_server.c  test_m1v2_list_refs.c
meta2v2/: CMakeLists.txt  generic.c  generic.h  generic_backend.c  m2gen.py  meta2_backend.c  meta2_backend.h  meta2_backend_dbconvert.c  meta2_backend_dbconvert.h  meta2_backend_internals.h  meta2_bean.c  meta2_bean.h  meta2_bean_utils.c  meta2_dedup_utils.c  meta2_dedup_utils.h  meta2_events.h  meta2_filter_context.c  meta2_filter_context.h  meta2_filters.h  meta2_filters_action_container.c  meta2_filters_action_content.c  meta2_filters_action_events.c  meta2_filters_action_url.c  meta2_filters_check.c  meta2_filters_extract.c  meta2_filters_misc.c  meta2_gridd_dispatcher.c  meta2_gridd_dispatcher.h  meta2_macros.h  meta2_remote.c  meta2_remote.h  meta2_server.c  meta2_test_common.c  meta2_test_common.h  meta2_type_converter.c  meta2_utils.c  meta2_utils.h  meta2_utils_check.c  meta2_utils_json.h  meta2_utils_json_in.c  (+11 more)
polix/: CMakeLists.txt  event_manager.c  event_manager.h  event_storage.c  event_storage.h  gridd_module.h  module.c  module.h  polix-1.conf  polix_action.c  polix_action.h
proxy/: .functests  CMakeLists.txt  README.md  actions.h  admin_actions.c  cache_actions.c  common.c  common.h  cs_actions.c  dir_actions.c  index_actions.c  lb_actions.c  m2_actions.c  macros.h  meta2v2_remote.c  meta2v2_remote.h  metacd-monitor.py  metacd_http.c  path_parser.c  path_parser.h  reply.c  shard_resolver.c  shard_resolver.h  sqlx_actions.c  test.py  test_oio_info.sh  test_rawx_move.sh  transport_http.c  transport_http.h  url.c
python/: CMakeLists.txt  requirements.txt  setup.cfg  setup.py.in  test-requirements.txt  tox.ini
rainx/: CMakeLists.txt  mod_dav_rainx.c  mod_dav_rainx.h  rainx_config.h  rainx_config_stats.c  rainx_config_utils.c  rainx_http_tools.c  rainx_http_tools.h  rainx_internals.c  rainx_internals.h  rainx_properties.c  rainx_repository.c  rainx_repository.h  rainx_req_info.c  rainx_stats_rrd.c  rainx_stats_rrd.h
rawx/: .gitignore  CMakeLists.txt  README.md  beanstalk.go  buffer_pool.go  chunk_info.go  chunkrepo.go  conf_reader.go  configuration.go  const.go  filerepo.go  filerepo_test.go  go.mod  go.sum  handler_chunk.go  handler_info.go  handler_list_chunk.go  handler_stat.go  hexa.go  http.go  limited_reader.go  logger.go  main.go  main_test.go  metrics.go  notifier.go  notifier_test.go  probe.go  rawx.go  repo.go  request_logs.go  sample-rawx.conf  utils.go  utils_test.go
resolver/: CMakeLists.txt  hc_resolve.c  hc_resolver.c  hc_resolver.h  hc_resolver_internals.h
sdk/: CMakeLists.txt  README.md  http_internals.h  http_put.c  http_put.h  oio_config.c  oio_sds.c  oio_sds.h  test_ns.c  test_rawx.py  test_sdk.c  (+1 more)
(+2032 files in other folders)
