[project]
name = "oio"
dynamic = [
  "authors",
  "classifiers",
  "dependencies",
  "entry-points",
  "readme",
  "scripts",
  "version",
]

[build-system]
requires = ["ruff", "setuptools >= 47.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
  "--timer-top-n=10",
]
markers = [
  "no_thread_patch: tests which must run with unpatched thread module",
]

[tool.ruff]
target-version = "py37"
line-length = 88
extend-include = ["bin/*", "tools/**/*.py"]

[tool.ruff.lint]
extend-select = ["E", "I"]
ignore = ["D203", "D212"]
exclude = ["tools/oio-bootstrap.py"]

[tool.ruff.lint.per-file-ignores]
"{tests,tools}/**" = ["D"]
